--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ flutter:
     - assets/image/flag/
     - assets/image/darkmode/
     - assets/translations/
+    - assets/image/splash/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
