--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/image/darkmode/
     - assets/translations/
     - assets/image/splash/
+    - assets/image/bank_logo/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
